--- a/gin/Dockerfile
+++ b/gin/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine:3.14
 
-RUN mkdir "/app"
-WORKDIR "/app"
+RUN mkdir "/appHome"
+WORKDIR "/appHome"
 
 # mygindemo 在这里是APP的名字，也就是二进制文件的文件名
-COPY ./bin/gin-app-be /app/app
+COPY ./bin/gin-app-be /appHome/app
 # COPY resources /app/resources
 
 ENTRYPOINT [ "./app" ]
