--- a/gin/Taskfile.yml
+++ b/gin/Taskfile.yml
@@ -5,7 +5,7 @@ tasks:
   gorun:
     desc: "Init Swagger and run the Go app"
     cmds:
-      - cd cmd && swag init -d ./,../internal/ # TODO 需要把swag给跑通!!!！
+      - cd cmd && swag init -d ./,../internal/ # TODO 需要把swag给跑通!!!！!
       - cd cmd && go run .
 
   gobuild:
