--- a/gin/Taskfile.yml
+++ b/gin/Taskfile.yml
@@ -4,6 +4,8 @@ tasks:
 
   gorun:
     desc: "Init Swagger and run the Go app"
+    env:
+      ENV: dev
     cmds:
       - cd cmd && swag init -d ./,../internal/
       - cd cmd && go run .
