--- a/gin/Taskfile.yml
+++ b/gin/Taskfile.yml
@@ -2,10 +2,18 @@ version: '3'
 
 tasks:
 
-  gorun:
+  gorun-dev:
     desc: "Init Swagger and run the Go app"
     env:
       ENV: dev
+    cmds:
+      - cd cmd && swag init -d ./,../internal/
+      - cd cmd && go run .
+
+  gorun-prod:
+    desc: "Init Swagger and run the Go app"
+    env:
+      ENV: prod
     cmds:
       - cd cmd && swag init -d ./,../internal/
       - cd cmd && go run .
