--- a/gin/Taskfile.yml
+++ b/gin/Taskfile.yml
@@ -14,6 +14,7 @@ tasks:
     desc: "Init Swagger and run the Go app"
     env:
       ENV: prod
+      GIN_MODE: release
     cmds:
       - cd cmd && swag init -d ./,../internal/
       - cd cmd && go run .
